# muld-gui

./: .gitignore  CMakeLists.txt  README.md
cmake/: Findmuld.cmake
src/: main.cpp
src/app/: Application.cpp  Application.h
src/controllers/: DownloadController.cpp  DownloadController.h
src/core/: DownloadItem.cpp  DownloadItem.h  DownloadManager.cpp  DownloadManager.h  DownloadTypes.h
src/models/: DownloadListModel.cpp  DownloadListModel.h
src/resources/: resources.qrc
src/ui/dialogs/: AddDownloadDialog.cpp  AddDownloadDialog.h
src/ui/mainwindow/: MainWindow.cpp  MainWindow.h
src/ui/widgets/: DownloadItemDelegate.cpp  DownloadItemDelegate.h
src/utils/: FormatUtils.cpp  FormatUtils.h
